Add LON DiD example and some concluding thoughts.

--- a/covgit/slides.html
+++ b/covgit/slides.html
@@ -55,7 +55,16 @@ name: prologue
 
 # Preview
 
-We use a ~~novel~~ criminally underused observational dataset from the tech sector: **GitHub** ([www.github.com](www.github.com))
+We analyse the impact of COVID-19 on tech sector productivity using data from: **GitHub** ([www.github.com](www.github.com))
+
+- Several terabytes of data and incredibly high temporal resolution.
+- For a subset of users, we are also able to match location, job description, and gender.
+
+Main findings:
+
+- COVID-19 led to large and distinct changes in workplace habits at the global level.
+- More work online overall and more done outside of traditional office hours.
+- However, global trends mask quite a lot of heterogeneity at the local level.
 
 ---
 
@@ -499,6 +508,35 @@ In the plots that follow, I'm going to mark three "treatment" dates: 1) Microsof
 
 &lt;img src="slides_files/figure-html/age_gender_f40_49-1.png" width="95%" style="display: block; margin: auto;" /&gt;
 
+---
+class: inverse, center, middle
+name: conclusion
+
+# Conclusions
+
+---
+
+# Aside: DiD example (London)
+
+&lt;img src="pics/lon-did.png" width="95%" style="display: block; margin: auto;" /&gt;
+---
+
+# Conclusions
+
+We use a ~~novel~~ criminally underused observational dataset from the tech sector: **GitHub** ([www.github.com](www.github.com))
+
+- The first of (hopefully) many projects using these data.
+
+We see a pronounced realloction of work habits at the global level.
+
+- Overall increase in activity and more work on weekends.
+- These trends persist for most of 2021, although some reversion to baseline.
+
+Global trends mask considerable heterogeneity at the local level.
+
+- Generally coincide with local lockdowns and remote work mandates, but different work "cultures" and demographic features yield differential results.... sometimes of the opposing sign.
+
+Panel-based analysis is potentially complicated (SUTVA violations), although year-on-year and BSTS comparisons comfirm what is directly observerable in the data.
 
 
     </textarea>
