--- a/covgit/slides.html
+++ b/covgit/slides.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="" xml:lang="">
   <head>
-    <title>Working remotely or remotely working?</title>
+    <title>Labour reallocation and remote work</title>
     <meta charset="utf-8" />
-    <meta name="author" content="Grant McDermott (with Kendall Houghton and Ben Hansen)" />
+    <meta name="author" content="Grant McDermott and Ben Hansen" />
     <script src="libs/header-attrs/header-attrs.js"></script>
     <link href="libs/remark-css/default.css" rel="stylesheet" />
     <link href="libs/remark-css/metropolis.css" rel="stylesheet" />
@@ -14,9 +14,9 @@
     <textarea id="source">
 class: center, middle, inverse, title-slide
 
-# Working remotely or remotely working?
-## The effect of COVID-19 on tech worker productivity
-### Grant McDermott (with Kendall Houghton and Ben Hansen)
+# Labour reallocation and remote work
+## Evidence from millions of GitHub users during COVID-19
+### Grant McDermott and Ben Hansen
 ### University of Oregon
 
 ---
